# url-shortener

./: .env  Cargo.toml  Dockerfile  README.md
migrations/: 20240902051618_create_url_table.down.sql  20240902051618_create_url_table.up.sql
src/: app.rs  db.rs  main.rs
src/dtos/: mod.rs
src/handlers/: mod.rs  url_handlers.rs
src/models/: url.rs
src/services/: url_service.rs
