[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
mysql = "25.0.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
